--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -26,6 +27,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "eslint-plugin-prettier": "^5",
+    "prettier": "^3",
+    "prettier-plugin-tailwindcss": "^0.5",
+    "eslint-config-prettier": "^9",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
